--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.2.0",
     "@ng-icons/core": "^32.1.0",
     "@ng-icons/heroicons": "^32.1.0",
+    "@ng-icons/tabler-icons": "^32.1.0",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.13",
     "postcss": "^8.5.6",
