--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@ng-icons/heroicons": "^32.1.0",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.13",
     "tailwindcss-primeui": "^0.6.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@angular/build": "^20.2.2",
