--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests (optional)
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
+      # - name: Run tests (optional)
+      #   run: npm run test -- --watch=false --browsers=ChromeHeadless
 
       - name: Build Angular app
         run: npm run build
